feat: extract all review comments and improve documentation
BREAKING CHANGE: Extension now extracts all review comments (bots and humans),
not just bot comments. This is a major functionality update to v3.0.0.

Major changes:
- Extract all review comments with author type classification
- Add author badges (🤖 for bots, 👤 for humans) to differentiate comment types
- Add "By Author Type" breakdown in summary format
- Implement outdated/resolved comment filtering with stats
- Enhanced bot detection for GitHub Copilot and Cursor
- Rename extension to "GitHub PR Review Extractor"
- Update all UI text from "issues" to "comments"

Documentation:
- Create comprehensive CONTRIBUTING.md with contribution guidelines
- Update README.md with current v3.0.0 functionality
- Add TESTING_GUIDE.md for manual testing procedures
- Add RELEASE_NOTES_v3.0.0.md documenting major changes
- Add FIX_SUMMARY_v2.1.1.md for bug fix documentation
- Add UPDATE_SUMMARY.md for version history

Technical improvements:
- Add isBot, isHuman, type, and author fields to comment objects
- Implement filterIssues() with excludeOutdated option
- Improve DOM selector resilience for GitHub UI changes
- Update manifest.json to v3.0.0 and new extension name

--- a/popup.html
+++ b/popup.html
@@ -197,11 +197,20 @@
   </style>
 </head>
 <body>
-  <h1>🤖 GitHub PR Bot Extractor</h1>
-  <p class="description">Extract Copilot and Bugbot suggestions from this PR page.</p>
+  <h1>📝 GitHub PR Review Extractor</h1>
+  <p class="description">Extract all review comments from this PR (bots and humans).</p>
   
   <div class="section">
     <button id="extractBtn">Extract All Issues</button>
+  </div>
+  
+  <div class="section" id="filterSection" style="display: none;">
+    <div class="section-title">Filters:</div>
+    <label style="display: flex; align-items: center; font-size: 13px; color: #24292f; cursor: pointer;">
+      <input type="checkbox" id="excludeOutdated" style="margin-right: 8px;" checked>
+      Exclude outdated issues
+    </label>
+    <div id="filterStats" style="font-size: 11px; color: #57606a; margin-top: 4px;"></div>
   </div>
   
   <div class="section" id="formatSection" style="display: none;">
