refactor: migrate extension to TypeScript with modular architecture
Restructured the GitHub PR Bot Extractor extension from vanilla JavaScript
to TypeScript with a modular, maintainable architecture.

Key Changes:
- Migrated all core functionality to TypeScript
- Reorganized codebase into logical directories (src/core, src/services,
  src/ui, src/utils)
- Archived legacy JavaScript files to archive/legacy-js/
- Moved documentation to dedicated docs/ directory
- Added build system (build.js) for manifest generation
- Implemented internationalization support (i18n) with multi-language
  support (en, de, es, fr)
- Added new features: analytics, batch processing UI, virtual scrolling
- Created type definitions for Chrome APIs, GitHub data, and LLM interfaces

Architecture:
- Core: content scripts, extractors, filters, sorters, formatters
- Services: GitHub API, LLM client, review engine, batch processor
- UI: popup, settings, history, analytics, batch UI (all TypeScript)
- Utils: caching, error handling, i18n, virtual scroll

--- a/popup.html
+++ b/popup.html
@@ -428,6 +428,7 @@
 
   <div id="status"></div>
 
+  <script src="i18n.js"></script>
   <script src="filter-presets.js"></script>
   <script src="sorters.js"></script>
   <script src="review-history.js"></script>
